[package]
name = "token-lender"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_lender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.27.0", features=["init-if-needed"] }
anchor-spl = "0.27.0"
mpl-token-metadata = { version="1.11", features = [ "no-entrypoint" ] }
pyth-sdk-solana = "0.7.1"
winnow = "=0.4.1"
